fixed blurry header onscroll

--- a/src/app/user/main/main.component.sass
+++ b/src/app/user/main/main.component.sass
@@ -1,7 +1,7 @@
 
 
 .slogan
-  padding: 8rem 2.5% 4rem
+  padding: 4rem 2.5%
   margin: 0 -2.65%
   background-color: $accent
   h1
